# nophish-server

./: .gitignore  Readme.md  compose.yml  db.py  main.py  models.py  pyproject.toml  requirements.txt
app/: autogen.py  database.py
app/detectors/: tasks.py
app/routers/: messages.py  notifications.py
app/scheme/: message.py  notification.py
data_to_parse/: first_5_urls.json  first_urls.py  test.jsonl  to_json.py
fcm/: firebase.py
llm/: openr.py
migrations/: env.py
migrations/versions/: 18da0b1782d3_added_packgename_to_notifications.py  3397e178827d_added_rel_hash.py  645dcf5a8f12_added_rel_info.py  d9f0c9642887_init_migration.py  ec730ee26b71_added_extratitle_and_isgroup.py
