[project]
name = "nophish-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "arq>=0.26.3",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "fastapi-pagination>=0.15.4",
    "firebase-admin>=7.1.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "redis>=5.3.1",
    "sqlmodel>=0.0.29",
    "testcontainers>=4.14.0",
    "uvicorn>=0.40.0",
]
